--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,8 @@ hr {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
+    border: black 3px solid;
+    border-radius: 10px;
 }
 
 .black {
@@ -164,26 +166,30 @@ hr {
 .centered {
     text-align: center;
 }
-
 .projectsContainer {
     margin-top: 100px;
     display: flex;
-    flex-direction: rows;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    overflow-x: auto;
+    gap: 20px;
+    width: 100%;
+    padding-bottom: 10px;
+    scrollbar-width: none;
 }
 
 .project h3,
 .project h5 {
-    margin: 5px; /* Removes all margins */
+    margin: 5px;
 }
 
 
 .project {
+    min-width: 300px;
+    max-width: 300px;
     height: 350px;
     width: 300px;
     background: white;
     display: flex;
+    flex: 0 0 auto;
     text-align: center;
     justify-content: center;
     flex-wrap: wrap;
